--- a/AKchatApp/src/app/user-profile/user-profile.component.html
+++ b/AKchatApp/src/app/user-profile/user-profile.component.html
@@ -18,14 +18,34 @@
                     <div class="edit-pencil"><i class="bi bi-pencil-square"
                             style="font-size: x-large;color: white;"></i></div>
                 </div>
+
+                <div class="user-image d-flex justify-content-center">
+                    <input class="image-input" type="file" #Image accept="image/*" (change)="handleFileInput2($event)">
+
+
+                    <ng-container *ngIf="imageUrl2;else noofflineuser2">
+                        <img class="user-image" [src]="imageUrl2" alt="">
+                    </ng-container>
+                    <ng-template #noofflineuser2>
+
+                        <div class="user-text me-2">Cover</div>
+                    </ng-template>
+
+
+                    <div class="edit-pencil"><i class="bi bi-pencil-square"
+                            style="font-size: x-large;color: white;"></i></div>
+                </div>
+
+
             </div>
             <div class="example-input-wrapper d-none">
                 <label for="duration">Animation duration:</label>
                 <input id="duration" value="2000" type="number" min="0" step="100" #duration>
-              </div>
+            </div>
             <mat-vertical-stepper #stepper labelPosition="bottom" [animationDuration]="duration.value">
                 <mat-step label="Personal Details">
-                    <ng-template matStepLabel>Personal Details<img src='/assets/img/perdetail.png' style="position: absolute;right: 0%;width:30px;height:35px"></ng-template>
+                    <ng-template matStepLabel>Personal Details<img src='/assets/img/perdetail.png'
+                            style="position: absolute;right: 0%;width:30px;height:35px"></ng-template>
                     <mat-card>
                         <div class="div1 d-flex justify-content-between">
                             <mat-card-content class="d-flex flex-column half-size">
@@ -79,8 +99,9 @@
                 </mat-step>
 
                 <mat-step label="More Details">
-                    <ng-template matStepLabel>More Details<img src='/assets/img/moredetail.png' style="position: absolute;right: 0%;width:30px;height:35px"></ng-template>
-                    
+                    <ng-template matStepLabel>More Details<img src='/assets/img/moredetail.png'
+                            style="position: absolute;right: 0%;width:30px;height:35px"></ng-template>
+
                     <mat-card>
                         <div class="div1 d-flex justify-content-between">
 
@@ -100,13 +121,12 @@
                                     <input type="date" id="birthday" name="birthday" formControlName="dob | date:'MM-dd-yyyy'"  (input)="updateDate($event)">
                               
                             </mat-card-content> -->
-                        
+
                             <mat-form-field class="date half-size">
                                 <mat-label>Choose a date</mat-label>
                                 <input matInput [matDatepicker]="picker" formControlName="dob">
                                 <mat-hint>MM/DD/YYYY</mat-hint>
-                                <mat-datepicker-toggle  matIconSuffix
-                                    [for]="picker"></mat-datepicker-toggle>
+                                <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
                                 <mat-datepicker #picker></mat-datepicker>
                             </mat-form-field>
 
@@ -159,7 +179,8 @@
                 </mat-step>
 
                 <mat-step label="Education/WorkPlace">
-                    <ng-template matStepLabel>Education/WorkPlace<img src='/assets/img/workicon.png' style="position: absolute;right: 0%;width:30px;height:35px"></ng-template>
+                    <ng-template matStepLabel>Education/WorkPlace<img src='/assets/img/workicon.png'
+                            style="position: absolute;right: 0%;width:30px;height:35px"></ng-template>
 
                     <mat-card>
                         <mat-card-content class="d-flex flex-column"
@@ -202,7 +223,8 @@
                 </mat-step>
 
                 <mat-step label="SocialMedia Links">
-                    <ng-template matStepLabel>SocialMedia Links<img src='/assets/img/socialimg.png' style="position: absolute;right: 0%;width:30px;height:35px"></ng-template>
+                    <ng-template matStepLabel>SocialMedia Links<img src='/assets/img/socialimg.png'
+                            style="position: absolute;right: 0%;width:30px;height:35px"></ng-template>
 
                     <mat-card>
                         <div class="d-flex flex-column" style="padding: 9px;">
