userprofile design changes

--- a/AKchatApp/src/app/user-profile/user-profile.component.html
+++ b/AKchatApp/src/app/user-profile/user-profile.component.html
@@ -1,30 +1,38 @@
 <div class="row d-flex justify-content-center main-body mt-5 mb-5">
     <div class="col-12 col-md-8 mb-5">
         <form class="mb-5" [formGroup]="empForm" (ngSubmit)="onFormSubmit()">
-            <div class="d-flex justify-content-center mb-5">
-                <div class="user-image d-flex justify-content-center">
-                    <input class="image-input" type="file" #Image accept="image/*" (change)="handleFileInput($event)">
+            <div class="d-flex justify-content-center mb-5" style="position: relative;height: 275px;">
+
+                <div style="    position: absolute;bottom: 116px;left: 43%;z-index: 22;">
+                    <div class="user-image d-flex justify-content-center">
+                        <input class="image-input" type="file" #Image accept="image/*"
+                            (change)="handleFileInput($event)">
 
 
-                    <ng-container *ngIf="imageUrl;else noofflineuser">
-                        <img class="user-image" [src]="imageUrl" alt="">
-                    </ng-container>
-                    <ng-template #noofflineuser>
+                        <ng-container *ngIf="imageUrl;else noofflineuser">
+                            <img class="user-image" [src]="imageUrl" alt="">
+                        </ng-container>
+                        <ng-template #noofflineuser>
 
-                        <div class="user-text me-2">{{this.service.myName.charAt(0)}}</div>
-                    </ng-template>
+                            <div class="user-text me-2">{{this.service.myName.charAt(0)}}</div>
+                        </ng-template>
 
 
-                    <div class="edit-pencil"><i class="bi bi-pencil-square"
-                            style="font-size: x-large;color: white;"></i></div>
+                        <div class="edit-pencil"><i class="bi bi-pencil-square"
+                                style="font-size: x-large;color: white;"></i></div>
+                    </div>
                 </div>
 
-                <div class="user-image d-flex justify-content-center">
-                    <input class="image-input" type="file" #Image accept="image/*" (change)="handleFileInput2($event)">
+                <div class=" d-flex justify-content-center" style="position: absolute;background-color: purple;   height: 100%;
+                    width: 100%;
+                    
+                    position: absolute;">
+                    <input class="image-input-cover" type="file" #Image accept="image/*"
+                        (change)="handleFileInput2($event)">
 
 
                     <ng-container *ngIf="imageUrl2;else noofflineuser2">
-                        <img class="user-image" [src]="imageUrl2" alt="">
+                        <img class="user-image-cover" [src]="imageUrl2" alt="">
                     </ng-container>
                     <ng-template #noofflineuser2>
 
@@ -32,8 +40,10 @@
                     </ng-template>
 
 
-                    <div class="edit-pencil"><i class="bi bi-pencil-square"
-                            style="font-size: x-large;color: white;"></i></div>
+                    <!-- <div class="edit-pencil"><i class="bi bi-pencil-square"
+                            style="font-size: x-large;color: white;"></i></div> -->
+
+
                 </div>
 
 
@@ -308,10 +318,11 @@
 
             </mat-vertical-stepper>
             <div class="d-flex justify-content-center">
-                <button mat-raised-button color="primary" class="w-50" type="submit" [disabled]="nameError && emailError">Save</button>
+                <button mat-raised-button color="primary" class="w-50" type="submit"
+                    [disabled]="nameError && emailError">Save</button>
             </div>
         </form>
-       
+
 
 
         <!-- <form [formGroup]="empForm" (ngSubmit)="onFormSubmit()">
