--- a/AKchatApp/src/app/user-profile/user-profile.component.css
+++ b/AKchatApp/src/app/user-profile/user-profile.component.css
@@ -36,11 +36,22 @@
 }
 
 .user-image{
-    height: 140px;
-    width: 140px;
+    height: 160px;
+    width: 160px;
     border-radius: 50%;
-    position: relative;
+    position: absolute;
+    background-color: rgb(207, 207, 207);
 }
+
+.image-input{
+    height: 150px;
+    width: 150px;
+    border-radius: 50%;
+    opacity: 0;
+    position: absolute;
+    z-index: 23;
+}
+
 
 .user-text{
     height: 140px;
@@ -56,26 +67,42 @@
     font-size: xxx-large;
 }
 
-.image-input{
-    height: 150px;
-    width: 150px;
-    border-radius: 50%;
+
+.image-input-cover{
+    height:100%;
+    width: 100%;
+  
     opacity: 0;
     position: absolute;
-    z-index: 22;
+    z-index: 20;
 }
+
+
+.user-image-cover{
+    height:100%;
+    width: 100%;
+  
+    opacity: 1;
+    position: absolute;
+    z-index: 19;
+    object-fit: cover;
+
+}
+
 
 .edit-pencil{
     position: absolute;
-    right: 0px;
-    bottom : 0px;
-    background-color: #22ce22;
+    right: 52px;
+    opacity: 0.7;
+    bottom: 54px;
+    background-color: #ababab;
     height: 35px;
     width: 35px;
     border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 22;
 }
 
 :host ::ng-deep .mat-form-field-infix{
