--- a/AKchatApp/src/app/user-detail/user-detail.component.html
+++ b/AKchatApp/src/app/user-detail/user-detail.component.html
@@ -6,29 +6,24 @@
             <button style="position: absolute;top:5px;left: 5px;border: 0px;background-color: transparent;"
                 (click)="back()">
                 <i style="color: grey;font-size: x-large;" class="bi bi-arrow-left-circle"></i></button>
-
-
             <div class="image d-flex justify-content-center mb-5">
                 <div class="user-image d-flex justify-content-center">
                     <ng-container *ngIf="service.oneuserdetail?.imgstr!==null; else noofflineuser">
                         <img class="myimage" [src]="service.oneuserdetail.imgstr" alt=""
                             style="border-radius: 50%;width:150px;height:150px">
                     </ng-container>
-
                     <ng-template #noofflineuser>
                         <div class="user-text notmyimage me-2" style="border-radius: 50%;width:150px;height:150px">
-                            {{service.oneuserdetail.name?.charAt(0)}}</div>
+                            {{service.oneuserdetail.name?.charAt(0)}}
+                        </div>
                     </ng-template>
                 </div>
             </div>
         </div>
         <div *ngIf="isLoading" class="buffer-screen">
-
             <img style="height: 30px;width: 30px;" src="https://media.tenor.com/_62bXB8gnzoAAAAj/loading.gif" alt="">
             <p class="text-center ms-2" style="font-size: larger; font-weight: 600;">Loading...</p>
         </div>
-
-
         <div class="container mt-4">
             <div class="middlesection pt-3" style="background: white;">
                 <div style="text-align: center;font-size: 27px;font-weight: 500;" class="mb-3">
@@ -360,133 +355,6 @@
                 </div>
             </div>
         </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-        <!-- <div class="d-flex justify-content-center">
-    <div class="col-10"> -->
-
-
-
-        <!-- <div class="row d-flex justify-content-center main-body mt-5 mb-5">
-            <div class="col-12 col-md-8 mb-5">
-
-
-
-
-
-
-
-
-                <mat-card>
-                    <div class="div1 d-flex justify-content-between">
-                        <mat-card-content class="d-flex flex-column half-size">
-
-                            <mat-form-field appearance="outline">
-                                <mat-label>Name</mat-label>
-                                <input matInput formControlName="name" readonly="true"
-                                    value={{service.oneuserdetail.name}}>
-
-                            </mat-form-field>
-                        </mat-card-content>
-                        <mat-card-content class="d-flex flex-column half-size">
-                            <mat-form-field appearance="outline">
-                                <mat-label>Email</mat-label>
-
-                                <input matInput formControlName="email" readonly="true"
-                                    value={{service.oneuserdetail.email}}>
-                            </mat-form-field>
-                        </mat-card-content>
-                    </div>
-
-
-                    <div class="div1 d-flex justify-content-between">
-                        <mat-card-content class="d-flex flex-column mb-4 content-with-border half-size">
-                            <div class="d-flex">
-                                <mat-label>Gender</mat-label>
-
-                                <mat-radio-group class="mb-2" formControlName="gender" readonly="true"
-                                    value={{service.oneuserdetail.gender}}>
-                                    <mat-radio-button class="ms-4" value="Male">Male</mat-radio-button>
-                                    <mat-radio-button class="ms-4" value="Female">Female</mat-radio-button>
-                                    <mat-radio-button class="ms-4" value="Other">Other</mat-radio-button>
-                                </mat-radio-group>
-                            </div>
-                        </mat-card-content>
-
-                        <mat-card-content class="d-flex flex-column content-with-border half-size">
-                            <div class="d-flex">
-                                <mat-label>Status</mat-label>
-
-                                <mat-radio-group style="width:56%" class="mb-2" formControlName="status" readonly="true"
-                                    value={{service.oneuserdetail.status}}>
-                                    <mat-radio-button class="ms-4" value="Single">Single</mat-radio-button>
-                                    <mat-radio-button class="ms-4" value="Married">Married</mat-radio-button>
-                                    <mat-radio-button class="ms-4" value="Prefer Not To Say">Prefer Not To
-                                        Say</mat-radio-button>
-                                </mat-radio-group>
-                            </div>
-
-                        </mat-card-content>
-                    </div>
-
-                    <div class="div1 d-flex justify-content-between">
-
-
-                        <mat-card-content class="d-flex flex-column half-size">
-                            <mat-form-field appearance="outline">
-                                <mat-label>About Me</mat-label>
-
-                                <input matInput formControlName="about" readonly="true"
-                                    value={{service.oneuserdetail.aboutme}}>
-                            </mat-form-field>
-                        </mat-card-content>
-
-                    </div> -->
-
-
-
-        <!-- <mat-card-content class="d-flex flex-column about">
-                        <label>About me</label>
-                   
-
-                        <p></p>
-
-
-                    </mat-card-content> -->
-
-
-
-
-
-
-
-        <!-- <mat-card-content class="d-flex flex-column"
-                        style="margin-left: 0px !important;width:100% !important">
-                        <div class="d-flex align-items-center">
-                            <label class="me-1" style="font-size: 17px;font-weight: 500;">WorkPlace</label>
-                            <img style="width:23px;height:24px" src='/assets/img/workicon.png' />
-                        </div>
-
-
-
-
-
-
-
-
-
-
 
 
 
