--- a/AKchatApp/src/app/user-profile/user-profile.component.html
+++ b/AKchatApp/src/app/user-profile/user-profile.component.html
@@ -23,7 +23,7 @@
                     </div>
                 </div>
 
-                <div class=" d-flex justify-content-center" style="position: absolute;background-color: purple;   height: 100%;
+                <div class=" d-flex justify-content-center" style="position: absolute;background-color: #bbffbb;   height: 100%;
                     width: 100%;
                     
                     position: absolute;">
@@ -36,7 +36,7 @@
                     </ng-container>
                     <ng-template #noofflineuser2>
 
-                        <div class="user-text me-2">Cover</div>
+                        <div class="user-text-cover me-2">Tap To Add Cover Image</div>
                     </ng-template>
 
 
