--- a/AKchatApp/src/app/user-detail/user-detail.component.css
+++ b/AKchatApp/src/app/user-detail/user-detail.component.css
@@ -89,16 +89,6 @@
     height: fit-content;
 }
 
-@media screen and (max-width:769px){
-  .div1{
-    flex-direction: column !important;
-  }
-  .half-size{
-    width: 100% !important;
-  }
-}
-
-
 .about {
     width: 93% !important;
 }
@@ -148,6 +138,13 @@
   }
   .wholebody{
     position: relative;
+    margin-left: 11%;
+    margin-right: 11%;
+    box-shadow: 3px 3px 13px -3px #888888;
+    border: 1px solid lightgrey;
+    background: white;
+    border-radius: 10px;
+    padding: 30px 10px 10px 10px;
   }
 
   .smUser-text{
@@ -161,4 +158,54 @@
     color: red;
     font-weight: 600;
     font-size: large;
+  }
+
+
+  @media screen and (max-width:769px){
+    .div1{
+      flex-direction: column !important;
+    }
+    .half-size{
+      width: 100% !important;
+    }
+  }
+
+  @media screen and (max-width:1500px){
+    .wholebody{
+        margin-left: 7%;
+        margin-right:7%;
+    }
+  }
+
+  @media screen and (max-width:1381px){
+    .wholebody{
+        margin-left: 4%;
+        margin-right:4%;
+    }
+  }
+  
+  @media screen and (max-width:1381px){
+    .wholebody{
+        margin-left: 0%;
+        margin-right:0%;
+    }
+  }
+  @media screen and (max-width:1230px){
+   .afterbase{
+    flex-direction: column;
+   }
+   .afteritem1{
+    width:100%;
+    display: flex;
+
+   }
+   .afteritem2{
+    width:100%;
+   }
+   .afteritem1_2{
+    width:50%;
+   }
+   .afteritem1_1{
+    width:50%;
+   }
   }
