--- a/AKchatApp/src/app/user-detail/user-detail.component.html
+++ b/AKchatApp/src/app/user-detail/user-detail.component.html
@@ -1,11 +1,18 @@
-<div class="wholebody"
-    style="margin-left: 160px;margin-right: 160px;box-shadow: 3px 3px 13px -3px #888888;border: 1px solid lightgrey;background: white;border-radius: 10px;padding: 30px 10px 10px 10px;">
+<div class="wholebody" style="">
     <div style="border: 1px solid lightgrey;border-radius: 10px;">
         <div style="height: 209px;position: relative;background: whitesmoke;">
-            <img [src]="service.oneuserdetail.imgstr2" style="width:100%;height:100%">
+            <ng-container *ngIf="service.oneuserdetail?.imgstr2!==null; else nocoverimage">
+                <img [src]="service.oneuserdetail.imgstr2" style="width:100%;height:100%">
+            </ng-container>
+            
+            <ng-template #nocoverimage>
+
+            </ng-template>
+
             <button style="position: absolute;top:5px;left: 5px;border: 0px;background-color: transparent;"
                 (click)="back()">
-                <i style="color: grey;font-size: x-large;" class="bi bi-arrow-left-circle"></i></button>
+                <i style="color: grey;font-size: x-large;" class="bi bi-arrow-left-circle"></i>
+            </button>
             <div class="image d-flex justify-content-center mb-5">
                 <div class="user-image d-flex justify-content-center">
                     <ng-container *ngIf="service.oneuserdetail?.imgstr!==null; else noofflineuser">
@@ -49,9 +56,9 @@
             </div>
 
             <div class="datasection p-1" style="background: whitesmoke;">
-                <div class="row p-2">
-                    <div class="col-4" style="border-radius: 6px;">
-                        <div class="m-2 p-2" style="background-color: white;">
+                <div class="row p-2 afterbase">
+                    <div class="col-4 afteritem1" style="border-radius: 6px;">
+                        <div class="m-2 p-2 afteritem1_1" style="background-color: white;">
                             <span style="font-size: 20px;font-weight: 500;" class="ms-2 mb-2">Intro</span>
                             <p class="pstyle d-flex align-items-center"><mat-icon class="mx-2"
                                     style="color: darkgray;margin-top: 6px;">queue</mat-icon>
@@ -76,7 +83,7 @@
                             </p>
                             <!-- <p>{{service.mutualFriends.names}}</p> -->
                         </div>
-                        <div class="m-2 p-3" style="background-color: white;">
+                        <div class="m-2 p-3 afteritem1_2" style="background-color: white;">
                             <div style="font-size: large; font-weight: 700;color: purple;">
                                 Mutual Friends
                             </div>
@@ -101,7 +108,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-8 mt-2" style="border-radius: 6px;">
+                    <div class="col-8 mt-2 afteritem2" style="border-radius: 6px;">
                         <div *ngIf="selecteddiv===1" class="p-3 d-flex flex-column" style="background: white;">
                             <div style="font-size:18px;font-weight: 500;">
                                 Posts
