--- a/AKchatApp/src/app/chat/chatpage/chatpage.component.css
+++ b/AKchatApp/src/app/chat/chatpage/chatpage.component.css
@@ -128,6 +128,9 @@
     .mainBody {
       display: none !important;
     }
+    /* .searchdiv{
+        display: block !important;
+    } */
     .tabsbody{
         display: block !important;
     }
