--- a/AKchatApp/src/app/user-detail/user-detail.component.html
+++ b/AKchatApp/src/app/user-detail/user-detail.component.html
@@ -1,4 +1,5 @@
-<div class="wholebody" style="">
+<div class="wholebody"
+    style="box-shadow: 3px 3px 13px -3px #888888;border: 1px solid lightgrey;background: white;border-radius: 10px;padding: 30px 10px 10px 10px;">
     <div style="border: 1px solid lightgrey;border-radius: 10px;">
         <div style="height: 209px;position: relative;background: whitesmoke;display: flex;justify-content: center;">
             <ng-container *ngIf="service.oneuserdetail?.imgstr2!==null; else noofflineuser2">
